--- a/src/main/webapp/WEB-INF/templates/grid.html
+++ b/src/main/webapp/WEB-INF/templates/grid.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Grid</h1>
 	<hr/>
-	<form id="gridForm" th:action="@{/grid}" >
+	<form id="gridForm" th:action="@{/grid/update}" >
 	<input id="id" name="id" type="text" data-bind="value: id"/>
 	<table>
 	  <thead>
@@ -23,7 +23,7 @@
         </tr>
       </tbody>
     </table>
-    <button id="reset" type="submit" data-bind="click: reset">reset</button>
+    <button id="reset" type="button" data-bind="click: update">udpate</button>
     </form>
 </body>
 <script type="text/javascript" src="../../../resources/js/jquery-1.7.2.min.js" th:src="@{/resources/js/jquery-1.7.2.min.js}"></script>
